--- a/index.html
+++ b/index.html
@@ -22,5 +22,51 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/).
           - Add another H3 that contains "Contact Me," a paragraph tag containing your email, and a paragraph tag containing your phone number (these can be fake!).
      -->
+     <div>
+         <h1>
+             Preston Darrough
+         </h1>
+         <h2>
+             Full Stack Software Developer
+         </h2>
+         <hr>
+         <p>Cats are just wonderful creatures</p>
+         
+         <h3>
+            My Projects
+         </h3>
+         <p>comming soon!</p>
+         <h3>About me</h3>
+         <p>
+            I'm baby pok pok distillery bitters shabby chic post-ironic vaporware. PBR&B kitsch drinking vinegar, leggings yuccie dolor do 
+            organic. Palo santo fixie mumblecore woke taxidermy do. Air plant seitan actually quinoa whatever drinking vinegar cliche +1 
+            skateboard anim raclette neutra.
+        </p> 
+        Tote bag post-ironic activated charcoal banjo copper mug, glossier mumblecore scenester PBR&B. Letterpress scenester eu actually 
+        narwhal thundercats fanny pack butcher roof party. Craft beer keffiyeh deep v polaroid lorem tousled aliqua +1 direct trade selfies 
+        copper mug readymade. Jean shorts kinfolk swag, laboris PBR&B proident waistcoat live-edge. Brooklyn dolore selfies brunch, whatever
+         taiyaki art party ea minim chia commodo. Messenger bag sed sunt non you probably haven't heard of them stumptown chartreuse typewriter.
+         <p>   
+            Everyday carry man bun semiotics, lumbersexual street art quis direct trade adipisicing cardigan ea fingerstache viral kale chips minim. Salvia taiyaki glossier thundercats. Affogato marfa hella, art party iPhone brunch swag. Sriracha pitchfork jean shorts esse flexitarian, elit laboris duis meditation chia kale chips anim XOXO. Pickled cray tousled cupidatat photo booth officia. Tilde scenester cronut, flexitarian dolore listicle chicharrones consectetur offal ipsum lo-fi lyft readymade excepteur small batch. Elit raclette mlkshk helvetica fingerstache occaecat. In massa tempor nec feugiat nisl pretium fusce. Vitae nunc sed velit dignissim sodales. Amet aliquam id diam maecenas ultricies mi 
+            eget mauris. Euismod lacinia at quis risus sed vulputate odio ut. Id velit ut tortor pretium viverra suspendisse. Etiam tempor orci
+             eu lobortis elementum nibh. Sit amet venenatis urna cursus eget nunc. Et molestie ac feugiat sed. Placerat duis ultricies lacus sed
+             turpis tincidunt id aliquet. Tortor posuere ac ut consequat. Libero enim sed faucibus turpis in eu mi.
+         </p>   
+            Fames ac turpis egestas integer eget aliquet nibh praesent tristique. Odio facilisis mauris sit amet. Est ante in nibh mauris. Ac 
+            tincidunt vitae semper quis. Libero justo laoreet sit amet cursus sit amet. Mollis aliquam ut porttitor leo a diam sollicitudin.
+             Purus semper eget duis at tellus at urna condimentum. Vestibulum morbi blandit cursus risus. Commodo odio aenean sed adipiscing 
+            diam donec adipiscing tristique. Quisque id diam vel quam elementum. Ac placerat vestibulum lectus mauris ultrices eros in cursus. 
+            Justo nec ultrices dui sapien eget mi proin sed. Dignissim convallis aenean et tortor at risus viverra. Molestie a iaculis at erat 
+            pellentesque adipiscing.
+         <p>   
+            Maecenas accumsan lacus vel facilisis volutpat est velit. Pretium lectus quam id leo. Fringilla urna porttitor rhoncus dolor purus 
+            non enim. Lectus mauris ultrices eros in. Pellentesque habitant morbi tristique senectus et netus. Vitae congue mauris rhoncus aenean.
+             Magna fringilla urna porttitor rhoncus. Non odio euismod lacinia at quis risus. Ultrices tincidunt arcu non sodales neque sodales ut 
+            etiam. Mauris nunc congue nisi vitae suscipit tellus mauris a. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. 
+            Faucibus vitae aliquet nec ullamcorper. Malesuada pellentesque elit eget gravida cum sociis natoque. Ultrices vitae auctor eu augue ut.
+             Vitae congue eu consequat ac felis donec et. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nisl pretium fusce id velit ut.
+             Eget nullam non nisi est sit amet. Viverra aliquet eget sit amet tellus.
+         </p>
+     </div>
   </body>
 </html>
