--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         BONUS: Try one of the following ideas if you finish early.
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/).
-          - Add another H3 that contains "Contact Me," a paragraph tag containing your email, and a paragraph tag containing your phone number (these can be fake!).
+          - Add another H3 that contains "Contact Me," a paragraph tag containing your email, and a paragraph tag containing your 
+          phone number (these can be fake!).
      -->
      <div>
          <h1>
@@ -58,15 +59,11 @@
             diam donec adipiscing tristique. Quisque id diam vel quam elementum. Ac placerat vestibulum lectus mauris ultrices eros in cursus. 
             Justo nec ultrices dui sapien eget mi proin sed. Dignissim convallis aenean et tortor at risus viverra. Molestie a iaculis at erat 
             pellentesque adipiscing.
-         <p>   
-            Maecenas accumsan lacus vel facilisis volutpat est velit. Pretium lectus quam id leo. Fringilla urna porttitor rhoncus dolor purus 
-            non enim. Lectus mauris ultrices eros in. Pellentesque habitant morbi tristique senectus et netus. Vitae congue mauris rhoncus aenean.
-             Magna fringilla urna porttitor rhoncus. Non odio euismod lacinia at quis risus. Ultrices tincidunt arcu non sodales neque sodales ut 
-            etiam. Mauris nunc congue nisi vitae suscipit tellus mauris a. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. 
-            Faucibus vitae aliquet nec ullamcorper. Malesuada pellentesque elit eget gravida cum sociis natoque. Ultrices vitae auctor eu augue ut.
-             Vitae congue eu consequat ac felis donec et. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Nisl pretium fusce id velit ut.
-             Eget nullam non nisi est sit amet. Viverra aliquet eget sit amet tellus.
-         </p>
+        </p>
+        <h3>Contact Me
+            <p>email@email.com</p>
+        <p> Phone 867 5309</p>
+        </h3>
      </div>
   </body>
 </html>
