external style added draft 1

--- a/index.html
+++ b/index.html
@@ -3,42 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Preston Darrough's Portfoliot</title>
+    <link rel= "stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <!-- 
-      Directions:
-        1. Create a DIV element to contain the page content.
-        2. Inside your DIV, create an H1 tag that contains your name as the text.
-        3. Below your H1 tag, create an H2 tag that contains the content text, "Software Developer."
-        4. Below your H2 tag, create an HR tag, which will make a horizontal line.
-        5. Create a paragraph tag and put a sentence of your choice in it. (Suggestion: "My favorite thing about programming is _______.")
-        6. Create an H3 tag that says "My Projects."
-        7. Create a paragraph tag that says "Coming Soon."
-        8. Create an H3 tag that says "About Me."
-        9. Create a paragraph tag that contains the "lorem ipsum" text. HINT: You will need to do a search for this text...it is long! Alternatively, grab a sample from this site: https://generator.lorem-ipsum.info/
+    <div class="intro">
+        <h1 class="Name">
+            Preston Darrough
+        </h1>
+        <h2 class="Title">
+            Full Stack Software Developer
+       </h2>
+       <p>
+           <img class="linkedin_photo"
+                src="https://media-exp1.licdn.com/dms/image/C5603AQFbxaq1b_0yfg/profile-displayphoto-shrink_400_400/0/1517789069832?e=1641427200&v=beta&t=BlnvSZV8uCSUENPKaOHGtNJJynnR94O_6JlcddRnSbA"
+                alt="My first time in vegas"
+            >
+       </p>
+    </div>    
+    <div class="main_body">
+        <p>Cats are just wonderful creatures</p>
 
-        BONUS: Try one of the following ideas if you finish early.
-          - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/).
-          - Add another H3 that contains "Contact Me," a paragraph tag containing your email, and a paragraph tag containing your 
-          phone number (these can be fake!).
-     -->
-     <div>
-         <h1>
-             Preston Darrough
-         </h1>
-         <h2>
-             Full Stack Software Developer
-         </h2>
-         <hr>
-         <p>Cats are just wonderful creatures</p>
-         
-         <h3>
+        
+        <h3 class="projects">
             My Projects
-         </h3>
-         <p>comming soon!</p>
-         <h3>About me</h3>
-         <p>
+        </h3>
+            <p class= projects_list>
+                <ul>
+                    <li>Building protfolio</li>
+                    <li> built resume website using react and firebase</li>
+                    <li>Various software automation for back end software updates</li>
+                </ul>
+            </p>
+        <p class="coming_soon">comming soon!</p>
+        <h3>About me</h3>
+        <p>
             I'm baby pok pok distillery bitters shabby chic post-ironic vaporware. PBR&B kitsch drinking vinegar, leggings yuccie dolor do 
             organic. Palo santo fixie mumblecore woke taxidermy do. Air plant seitan actually quinoa whatever drinking vinegar cliche +1 
             skateboard anim raclette neutra.
@@ -46,16 +45,16 @@
         Tote bag post-ironic activated charcoal banjo copper mug, glossier mumblecore scenester PBR&B. Letterpress scenester eu actually 
         narwhal thundercats fanny pack butcher roof party. Craft beer keffiyeh deep v polaroid lorem tousled aliqua +1 direct trade selfies 
         copper mug readymade. Jean shorts kinfolk swag, laboris PBR&B proident waistcoat live-edge. Brooklyn dolore selfies brunch, whatever
-         taiyaki art party ea minim chia commodo. Messenger bag sed sunt non you probably haven't heard of them stumptown chartreuse typewriter.
-         <p>   
+        taiyaki art party ea minim chia commodo. Messenger bag sed sunt non you probably haven't heard of them stumptown chartreuse typewriter.
+        <p>   
             Everyday carry man bun semiotics, lumbersexual street art quis direct trade adipisicing cardigan ea fingerstache viral kale chips minim. Salvia taiyaki glossier thundercats. Affogato marfa hella, art party iPhone brunch swag. Sriracha pitchfork jean shorts esse flexitarian, elit laboris duis meditation chia kale chips anim XOXO. Pickled cray tousled cupidatat photo booth officia. Tilde scenester cronut, flexitarian dolore listicle chicharrones consectetur offal ipsum lo-fi lyft readymade excepteur small batch. Elit raclette mlkshk helvetica fingerstache occaecat. In massa tempor nec feugiat nisl pretium fusce. Vitae nunc sed velit dignissim sodales. Amet aliquam id diam maecenas ultricies mi 
             eget mauris. Euismod lacinia at quis risus sed vulputate odio ut. Id velit ut tortor pretium viverra suspendisse. Etiam tempor orci
-             eu lobortis elementum nibh. Sit amet venenatis urna cursus eget nunc. Et molestie ac feugiat sed. Placerat duis ultricies lacus sed
-             turpis tincidunt id aliquet. Tortor posuere ac ut consequat. Libero enim sed faucibus turpis in eu mi.
-         </p>   
+            eu lobortis elementum nibh. Sit amet venenatis urna cursus eget nunc. Et molestie ac feugiat sed. Placerat duis ultricies lacus sed
+            turpis tincidunt id aliquet. Tortor posuere ac ut consequat. Libero enim sed faucibus turpis in eu mi.
+        </p>   
             Fames ac turpis egestas integer eget aliquet nibh praesent tristique. Odio facilisis mauris sit amet. Est ante in nibh mauris. Ac 
             tincidunt vitae semper quis. Libero justo laoreet sit amet cursus sit amet. Mollis aliquam ut porttitor leo a diam sollicitudin.
-             Purus semper eget duis at tellus at urna condimentum. Vestibulum morbi blandit cursus risus. Commodo odio aenean sed adipiscing 
+            Purus semper eget duis at tellus at urna condimentum. Vestibulum morbi blandit cursus risus. Commodo odio aenean sed adipiscing 
             diam donec adipiscing tristique. Quisque id diam vel quam elementum. Ac placerat vestibulum lectus mauris ultrices eros in cursus. 
             Justo nec ultrices dui sapien eget mi proin sed. Dignissim convallis aenean et tortor at risus viverra. Molestie a iaculis at erat 
             pellentesque adipiscing.
