--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Preston Darrough's Portfoliot</title>
+    <title>Preston Darrough's Portfolio</title>
     <link rel= "stylesheet" href="./assets/style.css">
   </head>
   <body>
@@ -38,6 +38,7 @@
         <p class="coming_soon">comming soon!</p>
         <h3>About me</h3>
         <p>
+            My name is preston, you can call me tony. I like to code. Here is some random text.
             I'm baby pok pok distillery bitters shabby chic post-ironic vaporware. PBR&B kitsch drinking vinegar, leggings yuccie dolor do 
             organic. Palo santo fixie mumblecore woke taxidermy do. Air plant seitan actually quinoa whatever drinking vinegar cliche +1 
             skateboard anim raclette neutra.
