--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>Preston Darrough's Portfolio</title>
     <link rel= "stylesheet" href="./assets/style.css">
+    <nav>
+        
+    </nav>
   </head>
   <body>
     <div class="intro">
