catch up commit

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Preston Darrough's Portfolio</title>
     <link rel= "stylesheet" href="./assets/style.css">
-    <nav>
-        
-    </nav>
+    
   </head>
   <body>
     <div class="intro">
@@ -23,7 +21,22 @@
                 alt="My first time in vegas"
             >
        </p>
-    </div>    
+    </div>  
+    <div id="navBar">
+        <nav class="navigation">
+            <ul>
+                <li>
+                    Bio 
+                </li>
+                <li>
+                    Resume
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/prestondarrough/">linked</a>
+                </li>
+            </ul>
+        </nav>
+    </div>  
     <div class="main_body">
         <p>Cats are just wonderful creatures</p>
 
