--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Preston Darrough
         </h1>
         <h2 class="Title">
-            Full Stack Software Developer
+            Full Stack Software Dev
        </h2>
        <p>
            <img class="linkedin_photo"
