--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main>
+        <div>
         <h1>About me</h1>
         <p>
             Born Preston James Darrough, First of his name. Monolicthic adminsitrator and analyst  
@@ -33,6 +34,7 @@
             Justo nec ultrices dui sapien eget mi proin sed. Dignissim convallis aenean et tortor at risus viverra. Molestie a iaculis at erat 
             pellentesque adipiscing.
         </p>
+    </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
