--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Preston Darrough's Portfolio</title>
     <link rel= "stylesheet" href="assets\css\style.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
   </head>
   <body>
     
     <main>
-    <div class="intro">
+    <div class="container-fluid">
         <h1 class="Name">
             Preston Darrough
         </h1>
@@ -20,8 +21,7 @@
        <p>
            <img class="linkedin_photo"
                 src="https://media-exp1.licdn.com/dms/image/C5603AQFbxaq1b_0yfg/profile-displayphoto-shrink_400_400/0/1517789069832?e=1641427200&v=beta&t=BlnvSZV8uCSUENPKaOHGtNJJynnR94O_6JlcddRnSbA"
-                alt="My first time in vegas"
-            >
+                alt="My first time in vegas">
        </p>
     </div>  
     <div id="navBar">
@@ -59,6 +59,8 @@
         </h3>
      </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
     <script src="assets\scripts\script.js"></script>
 </html>
